libtaskmanager: use QDateTime instead of QTime for lastActivated

TaskManager model can have rows sorted in wrong order if some tasks were activated yesterday and sort mode is SortLastActivated.

BUG: 493724
FIXED-IN: 6.2.5